--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -35,3 +35,8 @@ dgb.security.code.imageCode.urls=
 #------------------------------------------------------------
 #允许直接访问url   #验证码路径/code/image
 dgb.security.allowedPaths=${dgb.security.browser.session.destinationUrl},${dgb.security.browser.logOut.logoutSuccessUrl},${dgb.security.browser.loginPage},${dgb.security.browser.loginAction},/authentication/require,/assets/**,/druid/**,/dgb.html,/,/error,/**/*.ico,/code/image,/session/invalid
+#------------------------------------------------------------
+##################################浏览器安全
+
+#crsf不拦截路径
+dgb.security.browser.csrf=${dgb.security.allowedPaths}
