--- a/bdazjcommon/pom.xml
+++ b/bdazjcommon/pom.xml
@@ -50,10 +50,18 @@
             <version>0.0.8</version>
         </dependency>
 
+        <!--使用jasypt框架来处理properties和yml配置文件参数内容的加解密操作-->
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
             <version>2.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
         </dependency>
     </dependencies>
 </project>
