--- a/dgbsecurity/pom.xml
+++ b/dgbsecurity/pom.xml
@@ -17,6 +17,13 @@
             <artifactId>bda-zj-persistence</artifactId>
         </dependency>
 
+        <!-- xss过滤组件 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
