加入了CSRF防护后，退出登陆必须为POST请求。并携带参数。也可以加配置让可以GET请求退出

--- a/bdazjweb/src/main/resources/config/dgb-security.properties
+++ b/bdazjweb/src/main/resources/config/dgb-security.properties
@@ -14,8 +14,8 @@ dgb.security.browser.session.maximumSessions=1
 dgb.security.browser.session.maxSessionsPreventsLogin=false
 #------------------------------------------------------------
 ##################################退出
-#退出成功跳转页面
-dgb.security.browser.logOut.logoutSuccessUrl=/test.html
+#退出成功跳转页面，不用就注掉了
+#dgb.security.browser.logOut.logoutSuccessUrl=
 dgb.security.browser.logOut.action=/logOut
 
 #------------------------------------------------------------
@@ -24,7 +24,7 @@ dgb.security.browser.logOut.action=/logOut
 #验证码路径/code/image应该是允许直接访问的，验证码的input name要为imageCode
 #长度
 dgb.security.code.imageCode.length=2
-dgb.security.code.imageCode.width=1
+dgb.security.code.imageCode.width=80
 dgb.security.code.imageCode.height=50
 dgb.security.code.imageCode.expireIn=60
 #需要验证码拦截的url，已默认含登陆loginAction（这里不用写）
